syntax = "proto3";

option go_package = "./pb";

package pb;

message CreateRoomReq {
    string id = 1;
}

message CreateRoomResp {
    int64 returnCode = 1;
}

message JoinRoomReq {
    string id = 1;
}

message JoinRoomResp {
    int64 returnCode = 1;
}

message JoinRoomStreamReq {
}

message JoinRoomStreamResp {
    int64 returnCode = 1;
}

service roommanager {
    rpc createRoom(CreateRoomReq) returns (CreateRoomResp);
    rpc joinRoom(JoinRoomReq) returns (JoinRoomResp);
    rpc joinRoomStream(stream JoinRoomStreamReq) returns (stream JoinRoomStreamResp);
}